--- a/src/components/availability/userForm.css
+++ b/src/components/availability/userForm.css
@@ -17,11 +17,8 @@
 }
 
 .userFormButton {
-  height: 3em;
-  font-size: 1em;
-  padding-left: 3em;
-  padding-right: 3em;
-  display: flex;
+  width: 10em;
+  margin-left: 15.5em;
 }
 
 .datePicker: {
