--- a/src/containers/contact/contact.css
+++ b/src/containers/contact/contact.css
@@ -1,15 +1,16 @@
 
 .contact {
   background: #F5F5F5;
-  padding: 3em;
+  padding-top: 1em;
+  padding-bottom: 3em;
 }
 
 .contactsContainer {
-  margin-left: 10em;
-  margin-right: 10em;
   justify-content:space-between;
   display: flex;
-  margin-bottom: 3em;
+  margin-left: 3em;
+  margin-right: 3em;
+  margin-bottom: 1em;
 }
 
 .smallContactsContainer {
@@ -24,17 +25,21 @@
   text-align: center;
 }
 .contactHeader {
-  margin-bottom: 0.6em;
+  margin-bottom: 0.1em;
   font-size: 1.5em;
 }
 
 .mapContainer {
-  margin-top: 0.6em;
   width: 100%;
-  height: 10em;
+  height: 6em;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+.userFormContainer {
+  margin-left: 3em;
 }
