--- a/src/containers/events/events.css
+++ b/src/containers/events/events.css
@@ -2,7 +2,7 @@
 .sectionTitle {
   font-size: 1.3em;
   width: 90%;
-  border-bottom: 2px solid;
+  border-bottom: #008080 2px solid;
   flex: 1;
   padding-bottom: 10px;
   margin-bottom: 1em;
