--- a/src/components/book/bookOption.css
+++ b/src/components/book/bookOption.css
@@ -1,47 +1,38 @@
 
 .bookOptionContainer {
   display: flex;
-  background-color: #dddddd;
   padding-left: 2%;
   padding-right: 2%;
   height: 20em;
-}
-
-.bookOptionContainerAlt {
-  display: flex;
-  background-color: #f5f5f5;
-  padding-left: 2%;
-  padding-right: 2%;
-  height: 20em;
+  margin-bottom: 7em;
 }
 
 .bookOptionDescription {
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 .bookOptionImage {
-  width: 48%;
-  margin-left: 1%;
-  margin-right: 1%;
+  width: 70%;
 }
 
 .bookOptionTitle {
   margin-bottom: 0.5em;
   font-size: 1.5em;
-  text-align: center;
+  border-bottom: #008080 2px solid;
+  width: 100%;
 }
 
 .bookOptionCost {
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-bottom: 0.25em;
   text-align: center;
 }
 
 .bookOptionDate {
-  font-size: 0.9em;
+  font-size: 1em;
   margin-left: -0.50em;
   text-align: center;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 .bookOptionButton {
@@ -58,10 +49,18 @@
   text-decoration: none;
 }
 
+.bookOptionImageContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .bookOptionDetails {
   width: 48%;
   margin-top: 2em;
-  margin-left: 1%;
   margin-right: 1%;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
