--- a/src/components/global/pageIndicator.css
+++ b/src/components/global/pageIndicator.css
@@ -6,7 +6,6 @@
   width: 0.8em;
   background: white;
   display: inline-block;
-  opacity: 0.9
 }
 
 .circle {
@@ -14,12 +13,13 @@
   border-radius: 50%;
   height: 0.8em;
   width: 0.8em;
-  background: gray;
+  background: #008080;
   display: inline-block;
   opacity: 0.7
 }
 
 .pageIndicator{
   margin: auto;
-  width: 5.5%;
+  display: flex;
+  flex-direction: row;
 }
