--- a/src/components/home/ImageViewPager.css
+++ b/src/components/home/ImageViewPager.css
@@ -1,14 +1,19 @@
 
 .leftButton {
-  position: absolute;
-  top: 25em;
-  left: 2%;
+  position: relative;
+  height: 50px;
+  width: 50px;
+  z-index: 1;
+  margin-top: -15em;
 }
 
 .rightButton {
-  position: absolute;
-  top: 25em;
-  left: 93%;
+  position: relative;
+  left: 90%;
+  height: 50px;
+  z-index: 1;
+  margin-top: -2.5em;
+  width: 50px;
 }
 
 .imageList {
@@ -21,17 +26,14 @@
 }
 
 .viewPager {
-  white-space: nowrap;
-  width: 100%;
-  overflow: auto;
-  padding: 0;
-  margin: 0;
+  width: 90%;
 }
 
 .pageIndicatorContainer {
-  position: absolute;
-  top: 32em;
-  width: 100%;
+  position: relative;
+  display: flex;
+  align-self: center;
+  z-index: 1;
 }
 
 @-webkit-keyframes rightToLeft {
