--- a/src/components/home/imagePage.css
+++ b/src/components/home/imagePage.css
@@ -1,61 +1,10 @@
 
-.imageDescription {
-  text-align: center;
-  color: white;
-  font-size: 2em;
+.imagePage {
   width: 100%;
-  margin-bottom: 1em;
-}
-
-.image {
-  width: 100%;
-  margin-top: -7em;
-  margin-bottom: 7em;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 32em;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.overlayContent {
-  position: absolute;
-  top: 10em;
-  left: 0;
-  height: 32em;
-  width: 100%;
-}
-
-.imageTitle {
-  text-align: center;
-  color: white;
-  font-size: 2em;
-  width: 100%;
-  margin-bottom: 1em;
-}
-
-.imageButtonContainer {
-  width: 100%;
-  text-align: center;
-}
-
-.action {
-  margin: auto;
-  color: white;
-  padding: 0.8em;
-  font-size: 1em;
-  text-decoration: none;
-  background: rgba(0, 0, 0, 0.7);
 }
 
 .page {
-  display: inline-block;
   white-space: nowrap;
   position: relative;
-  height: 32em;
-  overflow: hidden;
+  height: 42em;
 }
