--- a/src/components/sections/sectionHeaders.css
+++ b/src/components/sections/sectionHeaders.css
@@ -14,8 +14,9 @@
 
 .sectionDescription {
   padding-top: 2em;
-  width: 60%;
+  width: 80%;
   text-align: center;
+  font-size: 18px;
 }
 
 .sectionDivider {
@@ -27,5 +28,5 @@
 .sectionText {
   padding-top: 0.5em;
   padding-bottom: 0.5em;
-  font-size: 2em;
+  font-size: 30px;
 }
