--- a/src/pages/events/events.css
+++ b/src/pages/events/events.css
@@ -1,6 +1,6 @@
 
 .sectionTitle {
-  font-size: 1.6em;
+  font-size: 24px;
   width: 100%;
   border-bottom: #008080 2px solid;
   padding-bottom: 10px;
@@ -8,29 +8,14 @@
 }
 
 .eventSectionContainer {
-  width: 45%;
+  width: 55%;
   margin-right: 3em;
 }
 
-.sectionHeader {
-  margin-top: 0.3em;
-  font-size: 1.5em;
-  margin-top: 1em;
-}
-
-.list {
-  margin: 0;
-}
 
 .copy {
-  font-size: 1.2em;
-  margin-left: 1em;
+  font-size: 18px;
   margin-top: 0.2em;
-}
-.explanation {
-  font-size: 0.8em;
-  margin-bottom: 0.3em;
-  width: 70%;
 }
 
 .eventRow {
@@ -41,8 +26,7 @@
   margin-bottom: 3em;
 }
 
-.eventImage {
-  margin-top: 3em;
-  width: 35em;
-  height: 23em;
+.eventSmallImage {
+  width: 50%;
+  height: 50%;
 }
