--- a/src/components/home/ImageViewPager.css
+++ b/src/components/home/ImageViewPager.css
@@ -3,8 +3,8 @@
   position: relative;
   height: 50px;
   width: 50px;
+  margin-top: -20%;
   z-index: 1;
-  margin-top: -15em;
 }
 
 .rightButton {
@@ -12,15 +12,16 @@
   left: 90%;
   height: 50px;
   z-index: 1;
-  margin-top: -2.5em;
+  margin-top: -8%;
   width: 50px;
 }
 
 .imageList {
   overflow: hidden;
+  display: flex;
+  align-items: row;
   white-space: nowrap;
   width: 100%;
-  height: 32em;
   padding: 0;
   margin: 0;
 }
