--- a/src/components/book/bookOption.css
+++ b/src/components/book/bookOption.css
@@ -3,7 +3,6 @@
   display: flex;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 100px;
 }
 
 .bookOptionDescription {
@@ -35,6 +34,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   align-items: center;
 }
 
